validacion de datos, limpieza y muestras

--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,3 +1,15 @@
 # Asignado a Sebastián (@asebasg)
+[theme]
+primaryColor = "#1E88E5"
+backgroundColor = "#FFFFFF"
+secondaryBackgroundColor = "#F0F2F6"
+textColor = "#262730"
+font = "sans serif"
 
-enableStaticServing = true
+[server]
+port = 8501
+address = "0.0.0.0"
+
+[browser]
+serverAddress = "localhost"
+gatherUsageStats = false
