--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ click==8.3.1
 colorama==0.4.6
 contourpy==1.3.3
 cycler==0.12.1
+et_xmlfile==2.0.0
 fonttools==4.60.1
 gitdb==4.0.12
 GitPython==3.1.45
@@ -20,8 +21,10 @@ MarkupSafe==3.0.3
 matplotlib==3.10.7
 narwhals==2.12.0
 numpy==2.3.5
+openpyxl==3.1.5
 packaging==25.0
 pandas==2.3.3
+patsy==1.0.2
 pillow==12.0.0
 plotly==6.5.0
 protobuf==6.33.1
@@ -33,9 +36,11 @@ pytz==2025.2
 referencing==0.37.0
 requests==2.32.5
 rpds-py==0.29.0
+scipy==1.16.3
 seaborn==0.13.2
 six==1.17.0
 smmap==5.0.2
+statsmodels==0.14.5
 streamlit==1.51.0
 tenacity==9.1.2
 toml==0.10.2
@@ -44,5 +49,3 @@ typing_extensions==4.15.0
 tzdata==2025.2
 urllib3==2.5.0
 watchdog==6.0.0
-scipy>=1.13.0
-openpyxl>=3.1.0
